# hermes-desktop-lite

./: .gitignore  FEATURES.md  LICENSE  PROJECT_ANALYSIS.md  README.md  README.zh-CN.md  components.json  demo-x.html  index.html  package-lock.json  package.json  readme-wechat-final.md  readme-wechat-html.html  readme-wechat-official.md  readme-wechat.md  readme-wechat_副本.md  vite.config.js
.claude/: settings.local.json
.github/workflows/: stage1-packages.yml
docs/superpowers/plans/: 2026-04-23-project-analysis.md  2026-04-23-session-model-selector.md
docs/superpowers/specs/: 2026-04-23-session-model-selector-design.md
scripts/: fix-dmg-popup.sh
src/: App.jsx  CommandsReference.jsx  CronView.jsx  MemoryView.jsx  Popup.jsx  SessionsView.jsx  SettingsModal.jsx  SkillsView.jsx  TaskView.jsx  TerminalView.jsx  api.js  data.js  i18n.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/components/: ChatMessage.jsx  FileView.jsx  InputArea.jsx  MessageList.jsx  ToolActivityPanel.jsx  ToolStepsTimeline.jsx  WorkspaceManagerDialog.jsx  WorkspaceSwitcher.jsx  file-view-utils.js  file-view-utils.test.js  model-config-utils.js  model-config-utils.test.js  view-frame.jsx
src/components/ui/: badge.jsx  button.jsx  dropdown-menu.jsx  input.jsx  scroll-area.jsx  sidebar.jsx  textarea.jsx
src/config/: context.js
src/locales/: en.json  zh-tw.json  zh.json
