[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.51.1", features = ["time", "macros", "rt-multi-thread"] }
futures = "0.3"
